[package]
name = "mu0_arm_assembler"
version = "0.1.0"
authors = ["ldg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

combine = "4.5.2"

[toolchain.optional]
rust-std = ["x86_64-pc-windows-gnu"]

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"

